# CodeLieutenant

./: .deepsource.toml  .gitignore  LICENCE  Makefile  README.md  Taskfile.yml  angular.json  docker-compose.yml  dusanmalusev.code-workspace  malusev998.code-workspace  package-lock.json  package.json
.github/workflows/: server_lint.yml  server_test.yml  server_tidy.yml  template_build.yml  test-api.yaml
api/: Cargo.toml  Dockerfile  config.example.toml
api/.cargo/: config.toml
api/pkg/sumdb/sum.golang.org/: latest
api/src/: main.rs  tracing.rs
api/src/config/: mod.rs
api/src/handlers/: mod.rs
api/src/handlers/contact/: mod.rs
client/: .gitignore  Dockerfile  README.md  angular.json  karma.conf.js  server.ts
e2e/src/: app.e2e-spec.ts
server/: .air.toml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.docker.yml  config.example.yml  docker-compose.yml  docker-composer.yml  go.mod  go.sum  main.go
server/api/: api.go  fiber.go  fiber_test.go
server/cmd/: cmd.go  cmd_test.go  generate.go  generate_test.go  server.go
server/config/: config.go  config_test.go
server/container/: container.go  database.go  fiber.go  repositories.go  services.go  utils.go  validation.go
server/database/: database.go  database_test.go  migrations.go
server/dto/: contact.go  subscription.go
server/handlers/: contact.go  contact_test.go  error.go  error_test.go  handlers.go  handlers_test.go  home.go  home_test.go  subscribe.go  subscribe_test.go
server/logging/: logging.go  logging_test.go
server/middleware/: context.go  context_test.go  timeout.go  timeout_test.go
server/models/: contact.go  image.go  model.go  post.go  subscription.go
server/public/: 394.1a6ddf461f37bd214d4b.js  50.111333925bd027b4a921.js  581.45bacc5563014626d989.js  836.04dd3a137a1b035e0458.js  836.07fd71e691574fec9574.js  836.d8ac17bea78e93dab60f.js  906.0bb6bd2af0ee2649715f.js  906.56b90d97eb270e4eb99a.js  906.889216a99061111d2fb1.js  (+22 more)
src/: index.html  styles.scss
template/: .gitignore  Makefile  README.md  assets.js  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
(+168 files in other folders)
