[package]
name = "api"
version = "0.1.0"
edition = "2021"
keywords = ["website", "blog", "dusanmalusev.dev"]
authors = ["Dusan Malusev <dusan@dusanmalusev.dev>"]
description = "My personal website and blog"
categories = ["web-programming", "web-programming::http-server"]
rust-version = "1.64"
license-file = "../LICENCE"
readme = "../README.md"

[dependencies]
tracing = { version = "0.1.36", features = ["async-await"] }
tracing-appender = "0.2.0"
tracing-attributes = "0.1"
tracing-futures = { version = "0.2.5", default-features = false, features = [
    "std",
    "tokio",
    "futures-03",
] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "parking_lot",
    "serde",
    "serde_json",
    "time",
    "tracing",
    "once_cell",
    "env-filter",
] }
tokio = { version = "1.24", features = ["full", "tracing"] }
console-subscriber = { version = "0.1.8", features = [
    "env-filter",
    "parking_lot",
    "parking_lot_crate",
] }
axum = { version = "0.6.0-rc.2", features = ["headers", "http2", "macros", "multipart", "ws"] }
config = { version = "0.13.2", features = ["indexmap", "toml"], default-features = false }
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_derive = "1.0.145"
time = { version = "0.3.15", features = ["parsing", "formatting", "macros", "serde", "serde-human-readable"] }

[profile.dist]
inherits = "release"
opt-level = 3
overflow-checks = false
debug = false
strip = true
debug-assertions = false
lto = true
codegen-units = 1
